--- a/io.html
+++ b/io.html
@@ -23,7 +23,8 @@
   </style>
 </head>
 <body>
-  <div class="chart"></div>
-  <script src="src/app.js"></script>
+<h1 class="title"></h1>
+<div class="chart"></div>
+<script src="src/timeChart/013_insertionOrder.js"></script>
 </body>
 </html>
