--- a/li.html
+++ b/li.html
@@ -23,7 +23,8 @@
   </style>
 </head>
 <body>
+  <h1 class="title"></h1>
   <div class="chart"></div>
-  <script src="src/app.js"></script>
+  <script src="src/timeChart/012_lineItem.js"></script>
 </body>
 </html>
